# xenserver-mcp

./: .gitignore  README.md  compose.yaml  mcpo-config.json
xenserver-mcp/: Dockerfile  README.md  main.py  pyproject.toml  run.sh
